Completed work on c5m5 Added props to the restaurant on c5m1, fixed LOS on jukebox c1m3 blocked players from standing in a safe spot on the drop at the event path Updated global filters with physics prop fixes, removing annoying props, and making some props static globally (provides more spawns for infected and stops players passing through objects that make no sense) Removed explosive fuel barrels (sacrifice and custom campaigns) Removed some stuff from specific maps that's now covered by global fixes Updated entity template and replaced all instances of using info_gamemode with logic_auto Replaced line break characters with , (except when modifying existing entities...)

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -162,6 +162,7 @@ add:
 ; --- Prefixing the name with "anv_mapfixes_losfix_" allows func_brush entities to be displayed with ShowUpdate()
 ; --- NOTE: It is NOT possible to rotate these brushes, the collision types that would allow it do not work for bounding boxed brushes
 ; --- NOTE: If players can collide with the brush it is recommended to create a physics clip around it for better collision
+; --- NOTE: Avoid creating func_button with this method, the button detection/pressing on the player's end is very buggy
 add:
 {
 	"classname" "logic_auto"
@@ -193,16 +194,10 @@ add:
 "[output named]" "[target entities named],[via this input],,0,-1"
 
 ; --- Method for removing _commentary.txt / lump / anv_mapfixes.nut entities
-; --- As they are spawned after the map is loaded they need to remove after a delay
-; --- Use info_gamemode to do this on a delay after the map has loaded, and to specify the desired gamemode
-modify:
+; --- Use logic_auto to do this on a delay after the map has loaded, since they are spawned after the map is loaded
+; --- NOTE: For gamemode specific changes use info_gamemode and fire outputs On[Gamemode]PostIO
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		"OnVersusPostIO" "[entity targetname or classname],Kill,,10,-1"
-	}
+	"classname" "logic_auto"
+	"OnMapSpawn" "[entity targetname or classname],Kill,,10,-1"
 }
