--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -37,19 +37,19 @@ add:
 	"wait" "-1"
 	"sounds" "32"
 	; --- Disable glow
-	"OnPressed" "call_elevator_button_propStopGlowing0-1"
+	"OnPressed" "call_elevator_button_prop,StopGlowing,,0,-1"
 	; --- Button and elevator lights
-	"OnPressed" "call_elevator_button_propSkin10-1"
-	"OnPressed" "call_elevator_button_propSkin00.3-1"
-	"OnPressed" "call_elevator_lightsSkin10.5-1"
+	"OnPressed" "call_elevator_button_prop,Skin,1,0,-1"
+	"OnPressed" "call_elevator_button_prop,Skin,0,0.3,-1"
+	"OnPressed" "call_elevator_lights,Skin,1,0.5,-1"
 	; --- Elevator moving sound
-	"OnPressed" "elevator_movement_soundPlaySound2-1"
+	"OnPressed" "elevator_movement_sound,PlaySound,,2,-1"
 	; --- Survivors call out pressing the button
-	"OnPressed" "!activatorSpeakResponseConceptc4m2_elevator_top_button0-1"
+	"OnPressed" "!activator,SpeakResponseConcept,c4m2_elevator_top_button,0,-1"
 	; --- Start panic event
-	"OnPressed" "directorForcePanicEvent3-1"
+	"OnPressed" "director,ForcePanicEvent,,3,-1"
 	; --- Elevator opens after ~30 seconds
-	"OnPressed" "call_elevator_relayTrigger34-1"
+	"OnPressed" "call_elevator_relay,Trigger,,34,-1"
 }
 ; --- Create a relay for handling elevator arrival
 {
@@ -57,18 +57,18 @@ add:
 	"origin" "2035 5661 2473"
 	"targetname" "call_elevator_relay"
 	; --- Button and elevator lights
-	"OnTrigger" "call_elevator_lightsSkin04-1"
+	"OnTrigger" "call_elevator_lights,Skin,0,4,-1"
 	; --- Stop elevator moving sound
-	"OnTrigger" "elevator_movement_soundStopSound0-1"
+	"OnTrigger" "elevator_movement_sound,StopSound,,0,-1"
 	; --- Elevator arrival sounds and dialogue
-	"OnTrigger" "elevator_stop_soundPlaySound2-1"
-	"OnTrigger" "sound_elevator_arrivedPlaySound4-1"
-	"OnTrigger" "sound_elevator_arrivedStopSound10-1"
+	"OnTrigger" "elevator_stop_sound,PlaySound,,2,-1"
+	"OnTrigger" "sound_elevator_arrived,PlaySound,,4,-1"
+	"OnTrigger" "sound_elevator_arrived,StopSound,,10,-1"
 	; --- Survivors call out the elevator arriving
-	"OnTrigger" "!activatorSpeakResponseConceptPlayerMoveOn5-1"
+	"OnTrigger" "!activator,SpeakResponseConcept,PlayerMoveOn,5,-1"
 	; --- Open the doors
-	"OnTrigger" "elevator_1_door1Open5-1"
-	"OnTrigger" "elevator_1_door2Open5-1"
+	"OnTrigger" "elevator_1_door1,Open,,5,-1"
+	"OnTrigger" "elevator_1_door2,Open,,5,-1"
 }
 modify:
 ; --- Give a unique name to the relevant elevator arrow lights so we only change this one
@@ -92,7 +92,7 @@ modify:
 	insert:
 	{
 		"filtername" "filter_survivor"
-		"OnStartTouch" "call_elevator_button_propStartGlowing0-1"
+		"OnStartTouch" "call_elevator_button_prop,StartGlowing,,0,-1"
 	}
 }
 ; --- Force the elevator doors to open after 20 seconds after reaching the ground floor (from when the door unlocks)
@@ -104,7 +104,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "elevator_door_button1Press24-1"
+		"OnTrigger" "elevator_door_button1,Press,,24,-1"
 	}
 }
 
@@ -266,8 +266,8 @@ modify:
 	}
 	insert:
 	{
-		"OnBreak" "lower_ledge_blockKill0-1"
-		"OnOpen" "lower_ledge_blockKill0-1"
+		"OnBreak" "lower_ledge_block,Kill,,0,-1"
+		"OnOpen" "lower_ledge_block,Kill,,0,-1"
 	}
 }
 
@@ -708,7 +708,7 @@ modify:
 	}
 	insert:
 	{
-		"OnPressed" "glass_kill_triggerKill0-1"
+		"OnPressed" "glass_kill_trigger,Kill,,0,-1"
 	}
 }
 
