--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -17,7 +17,7 @@ modify:
 	}
 	insert:
 	{
-		"OnPlayerPickup" "cola_coolerStopGlowing0-1"
+		"OnPlayerPickup" "cola_cooler,StopGlowing,,0,-1"
 	}
 }
 {
@@ -27,7 +27,7 @@ modify:
 	}
 	insert:
 	{
-		"OnEntitySpawned" "cola_coolerStartGlowing0-1"
+		"OnEntitySpawned" "cola_cooler,StartGlowing,,0,-1"
 	}
 }
 add:
@@ -986,7 +986,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "store_alarm_genericFadeOut53-1"
+		"OnTrigger" "store_alarm_generic,FadeOut,5,3,-1"
 	}
 }
 
@@ -1001,33 +1001,27 @@ modify:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- At the left end of the street by the starting saferoom
-		"OnVersusPostIO" "anv_mapfixes_yeswaycorner_clipKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswaycorner_wrongwayKill10-1"
-		; --- At the back of the underpass street by the white van
-		"OnVersusPostIO" "anv_mapfixes_clipgap_deadendfenceKill10-1"
-		; --- Area above the underpass, by the billboard and bridge
-		"OnVersusPostIO" "anv_mapfixes_yeswayturnpike_clipaKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswayturnpike_clipbKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswayturnpike_wrongwayaKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswayturnpike_wrongwaybKill10-1"
-		; --- Roof above the CEDA van drop
-		"OnVersusPostIO" "anv_mapfixes_yeswaychoke_clipKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswaychoke_wrongwayaKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswaychoke_wrongwaybKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_yeswaychoke_wrongwaycKill10-1"
-		; ---- On the roof right of the end saferoom
-		"OnVersusPostIO" "anv_mapfixes_sneaky_hunterKill10-1"
-	}
+	"classname" "logic_auto"
+	; --- At the left end of the street by the starting saferoom
+	"OnMapSpawn" "anv_mapfixes_yeswaycorner_clip,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaycorner_wrongway,Kill,,10,-1"
+	; --- At the back of the underpass street by the white van
+	"OnMapSpawn" "anv_mapfixes_clipgap_deadendfence,Kill,,10,-1"
+	; --- Area above the underpass, by the billboard and bridge
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_clipa,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_clipb,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_wrongwaya,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswayturnpike_wrongwayb,Kill,,10,-1"
+	; --- Roof above the CEDA van drop
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_clip,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwaya,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwayb,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_yeswaychoke_wrongwayc,Kill,,10,-1"
+	; ---- On the roof right of the end saferoom
+	"OnMapSpawn" "anv_mapfixes_sneaky_hunter,Kill,,10,-1"
 }
 
 ; =====================================================
