--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -8,7 +8,11 @@ filter:
 {
 	"hammerid" "8442672"
 }
-; --- Force survivors to always take the lower path
+; --- Remove entity that affects the event path route based on the "event" removed above
+{
+	"targetname" "compare_minifinale"
+}
+; --- Force survivors to always take the lower path leading to the event
 modify:
 {
 	match:
@@ -22,7 +26,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "relay_hallway_closeTrigger0-1"
+		"OnTrigger" "relay_hallway_close,Trigger,,0,-1"
 	}
 }
 ; --- Open up the Just For Kidz store so tanks don't need to use the vent, survivors can still go to this area but the path back remains blocked
@@ -85,14 +89,14 @@ add:
 	"StartDisabled" "0"
 	"spawnflags" "0"
 	; --- Event - Lower floor - Spawn both
-	"OnTrigger" "escalator_lower_01*FireUser10-1"
-	"OnTrigger" "escalator_lower_02*FireUser10-1"
+	"OnTrigger" "escalator_lower_01*,FireUser1,,0,-1"
+	"OnTrigger" "escalator_lower_02*,FireUser1,,0,-1"
 	; --- Event - Upper floor - Spawn standard versus path
-	"OnTrigger" "escalator_upper_01*FireUser10-1"
+	"OnTrigger" "escalator_upper_01*,FireUser1,,0,-1"
 	; --- Saferoom - Lower floor - Spawn escalator leading away from the upper escalators
-	"OnTrigger" "escalator_lower_04*FireUser10-1"
+	"OnTrigger" "escalator_lower_04*,FireUser1,,0,-1"
 	; --- Saferoom - Upper floor - Spawn standard versus path
-	"OnTrigger" "escalator_upper_03*FireUser10-1"
+	"OnTrigger" "escalator_upper_03*,FireUser1,,0,-1"
 }
 modify:
 {
@@ -106,7 +110,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "relay_elevator_path_customTrigger0-1"
+		"OnTrigger" "relay_elevator_path_custom,Trigger,,0,-1"
 	}
 }
 ; --- Remove other relay for setting paths as a precaution (the trigger for it seems to be missing)
@@ -328,6 +332,23 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Desk to block survivors from standing in a safe on the drop to the event path
+{
+	"classname" "prop_dynamic"
+	"origin" "1636 -1107 419"
+	"angles" "0 0 -76.5"
+	"model" "models/props_office/desk_01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1660 -1088 396"
+	"mins" "-47 -32 -116"
+	"maxs" "47 32 116"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Vending machine to return on the one-way drop
 {
 	"classname" "prop_dynamic"
@@ -399,7 +420,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "sound_alarmFadeOut53-1"
+		"OnTrigger" "sound_alarm,FadeOut,5,3,-1"
 	}
 }
 
@@ -595,10 +616,10 @@ add:
 ; --- Remove glass by hanging shelf
 filter:
 {
-	"hammerid" "1813544"
+	"targetname" "escalator_lower_03-railing_breakable"
 }
 {
-	"hammerid" "1813038"
+	"targetname" "escalator_lower_03-railing"
 }
 ; --- Clipping to prevent skips
 add:
