--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -12,8 +12,8 @@ modify:
 	}
 	insert:
 	{
-		"OnPressed" "pre_event_tankSpawnZombie29-1"
-		"OnPressed" "tank_wrongwayEnable28-1"
+		"OnPressed" "pre_event_tank,SpawnZombie,,29,-1"
+		"OnPressed" "tank_wrongway,Enable,,28,-1"
 		"OnPressed" "tank_teleport_trigger,Enable,,29,-1"
 	}
 }
@@ -41,11 +41,11 @@ add:
 ; --- Fix tank spawn direction
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputmins -134 -64 -1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputmaxs 134 64 1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputboxmins -134 -64 -1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputboxmaxs 134 64 1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputsolid 20-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,mins -134 -64 -128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,maxs 134 64 128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,boxmins -134 -64 -128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,boxmaxs 134 64 128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "trigger_teleport"
@@ -55,7 +55,7 @@ add:
 	"spawnflags" "1"
 	"StartDisabled" "1"
 	"target" "tank_spawn_position"
-	"OnStartTouch" "tank_teleport_triggerKill0-1"
+	"OnStartTouch" "tank_teleport_trigger,Kill,,0,-1"
 }
 {
 	"classname" "info_teleport_destination"
