--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -164,20 +164,20 @@ add:
 	"rendercolor" "153 65 29"
 	"disableshadows" "0"
 	"model" "models/props_vehicles/cara_95sedan.mdl"
-	"OnCarAlarmStart" "caralarm_highway_alarmtimerEnable0-1"
-	"OnCarAlarmEnd" "caralarm_highway_alarmtimerDisable0-1"
-	"OnCarAlarmStart" "caralarm_highway_alarmsoundPlaySound0-1"
-	"OnCarAlarmEnd" "caralarm_highway_alarmsoundStopSound0-1"
-	"OnCarAlarmChirpStart" "caralarm_highway_chirpPlaySound0.2-1"
-	"OnCarAlarmChirpEnd" "caralarm_highway_lightspritesHideSprite0.7-1"
-	"OnCarAlarmChirpStart" "caralarm_highway_lightspritesShowSprite0.2-1"
-	"OnCarAlarmStart" "caralarm_highway_glass_onDisable0-1"
-	"OnCarAlarmStart" "caralarm_highway_glass_offEnable0-1"
-	"OnCarAlarmEnd" "caralarm_highway_alarm_offTrigger0-1"
-	"OnCarAlarmEnd" "caralarm_highway_lightspritesHideSprite0-1"
-	"OnCarAlarmEnd" "caralarm_highway_headlightsLightOff0-1"
-	"OnCarAlarmEnd" "caralarm_highway_game_eventKill0-1"
-	"OnCarAlarmEnd" "caralarm_highway_remarkKill0-1"
+	"OnCarAlarmStart" "caralarm_highway_alarmtimer,Enable,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_alarmtimer,Disable,,0,-1"
+	"OnCarAlarmStart" "caralarm_highway_alarmsound,PlaySound,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_alarmsound,StopSound,,0,-1"
+	"OnCarAlarmChirpStart" "caralarm_highway_chirp,PlaySound,,0.2,-1"
+	"OnCarAlarmChirpEnd" "caralarm_highway_lightsprites,HideSprite,,0.7,-1"
+	"OnCarAlarmChirpStart" "caralarm_highway_lightsprites,ShowSprite,,0.2,-1"
+	"OnCarAlarmStart" "caralarm_highway_glass_on,Disable,,0,-1"
+	"OnCarAlarmStart" "caralarm_highway_glass_off,Enable,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_alarm_off,Trigger,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_lightsprites,HideSprite,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_headlights,LightOff,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_game_event,Kill,,0,-1"
+	"OnCarAlarmEnd" "caralarm_highway_remark,Kill,,0,-1"
 }
 {
 	"classname" "prop_car_glass"
@@ -319,12 +319,12 @@ add:
 	"spawnflags" "0"
 	"RefireTime" ".75"
 	"targetname" "caralarm_highway_alarmtimer"
-	"OnTimer" "caralarm_highway_lightspritesShowSprite0-1"
-	"OnTimer" "caralarm_highway_lightspritesHideSprite0.5-1"
-	"OnTimer" "caralarm_highway_lightspritesHideSprite0.5-1"
-	"OnTimer" "caralarm_highway_lightspritesShowSprite0-1"
-	"OnTimer" "caralarm_highway_headlightsLightOff0.5-1"
-	"OnTimer" "caralarm_highway_headlightsLightOn0-1"
+	"OnTimer" "caralarm_highway_lightsprites,ShowSprite,,0,-1"
+	"OnTimer" "caralarm_highway_lightsprites,HideSprite,,0.5,-1"
+	"OnTimer" "caralarm_highway_lightsprites,HideSprite,,0.5,-1"
+	"OnTimer" "caralarm_highway_lightsprites,ShowSprite,,0,-1"
+	"OnTimer" "caralarm_highway_headlights,LightOff,,0.5,-1"
+	"OnTimer" "caralarm_highway_headlights,LightOn,,0,-1"
 }
 {
 	"classname" "logic_relay"
@@ -332,10 +332,10 @@ add:
 	"StartDisabled" "0"
 	"spawnflags" "0"
 	"targetname" "caralarm_highway_alarm_on"
-	"OnTrigger" "caralarm_highway_carEnable0-1"
-	"OnTrigger" "caralarm_highway_alarm_onDisable0.02-1"
-	"OnTrigger" "caralarm_highway_glass_onEnable0-1"
-	"OnTrigger" "caralarm_highway_glass_offDisable0-1"
+	"OnTrigger" "caralarm_highway_car,Enable,,0,-1"
+	"OnTrigger" "caralarm_highway_alarm_on,Disable,,0.02,-1"
+	"OnTrigger" "caralarm_highway_glass_on,Enable,,0,-1"
+	"OnTrigger" "caralarm_highway_glass_off,Disable,,0,-1"
 }
 {
 	"classname" "logic_relay"
@@ -343,15 +343,15 @@ add:
 	"StartDisabled" "0"
 	"spawnflags" "0"
 	"targetname" "caralarm_highway_alarm_off"
-	"OnTrigger" "caralarm_highway_game_eventKill0-1"
-	"OnTrigger" "caralarm_highway_carDisable0-1"
-	"OnTrigger" "caralarm_highway_alarm_onEnable0.02-1"
-	"OnTrigger" "caralarm_highway_alarm_offDisable0.02-1"
-	"OnTrigger" "caralarm_highway_remarkKill0-1"
-	"OnTrigger" "caralarm_highway_glass_offEnable0-1"
-	"OnTrigger" "caralarm_highway_glass_onDisable0-1"
-	"OnTrigger" "caralarm_highway_headlightsLightOff0-1"
-	"OnTrigger" "caralarm_highway_lightspritesHideSprite0-1"
+	"OnTrigger" "caralarm_highway_game_event,Kill,,0,-1"
+	"OnTrigger" "caralarm_highway_car,Disable,,0,-1"
+	"OnTrigger" "caralarm_highway_alarm_on,Enable,,0.02,-1"
+	"OnTrigger" "caralarm_highway_alarm_off,Disable,,0.02,-1"
+	"OnTrigger" "caralarm_highway_remark,Kill,,0,-1"
+	"OnTrigger" "caralarm_highway_glass_off,Enable,,0,-1"
+	"OnTrigger" "caralarm_highway_glass_on,Disable,,0,-1"
+	"OnTrigger" "caralarm_highway_headlights,LightOff,,0,-1"
+	"OnTrigger" "caralarm_highway_lightsprites,HideSprite,,0,-1"
 }
 ; --- Survivor Dialogue
 {
@@ -1055,20 +1055,14 @@ add:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- Clip on motel roof before drop
-		"OnVersusPostIO" "anv_mapfixes_motelskyboxroof_clipinfectedKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_motelskyboxroof_wrongwayaKill10-1"
-		"OnVersusPostIO" "anv_mapfixes_motelskyboxroof_wrongwayfKill10-1"
-	}
+	"classname" "logic_auto"
+	; --- Clip on motel roof before drop
+	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_clipinfected,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_wrongwaya,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_motelskyboxroof_wrongwayf,Kill,,10,-1"
 }
 
 ; =====================================================
