--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -938,9 +938,9 @@ add:
 ; --- Add collision to sign and block LOS 
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_signAddOutputmins -104 -2 -340-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_signAddOutputmaxs 104 2 340-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_signAddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_sign,AddOutput,mins -104 -2 -34,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_sign,AddOutput,maxs 104 2 34,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_sign,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
@@ -1506,21 +1506,15 @@ add:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- Clip in area behind kiddyland
-		"OnVersusPostIO" "anv_mapfixes_yeswayfairback_funcinfclipKill10-1"
-		; --- Clip on end saferoom roof
-		"OnVersusPostIO" "anv_mapfixes_meticulous_funcinfclip01Kill10-1"
-		"OnVersusPostIO" "anv_mapfixes_meticulous_funcinfclip02Kill10-1"
-	}
+	"classname" "logic_auto"
+	; --- Clip in area behind kiddyland
+	"OnMapSpawn" "anv_mapfixes_yeswayfairback_funcinfclip,Kill,,10,-1"
+	; --- Clip on end saferoom roof
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,10,-1"
 }
 
 ; =====================================================
@@ -1820,9 +1814,9 @@ add:
 ; --- Add collision to sign and block LOS 
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_signAddOutputmins -2 -104 -450-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_signAddOutputmaxs 2 104 450-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_signAddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_sign,AddOutput,mins -2 -104 -45,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_sign,AddOutput,maxs 2 104 45,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_sign,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
