--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -319,7 +319,7 @@ add:
 	"spawnflags" "1"
 	"filtername" "survivor_filter"
 	"targetname" "coaster_button_block_trigger"
-	"OnStartTouch" "coaster_button_blockKill0-1"
+	"OnStartTouch" "coaster_button_block,Kill,,0,-1"
 }
 ; --- Block climbing coaster supports to skip starting the event
 {
@@ -1005,13 +1005,13 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "finale_alarm_soundFadeOut53-1"
-		"OnTrigger" "coaster_start_sound_downhillKill12-1"
-		"OnTrigger" "coaster_start_sound_downhill_longKill12-1"
-		"OnTrigger" "coaster_start_sound_uphillKill12-1"
-		"OnTrigger" "coaster_stop_sound_uphillKill12-1"
-		"OnTrigger" "coaster_move_loop_soundKill12-1"
-		"OnTrigger" "coaster_stop_soundKill12-1"
+		"OnTrigger" "finale_alarm_sound,FadeOut,5,3,-1"
+		"OnTrigger" "coaster_start_sound_downhill,Kill,,12,-1"
+		"OnTrigger" "coaster_start_sound_downhill_long,Kill,,12,-1"
+		"OnTrigger" "coaster_start_sound_uphill,Kill,,12,-1"
+		"OnTrigger" "coaster_stop_sound_uphill,Kill,,12,-1"
+		"OnTrigger" "coaster_move_loop_sound,Kill,,12,-1"
+		"OnTrigger" "coaster_stop_sound,Kill,,12,-1"
 	}
 }
 
@@ -1027,18 +1027,11 @@ modify:
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
 ; --- Remove Valve's commentary blockers so we can replace them with our own
-modify:
-{
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		"OnVersusPostIO" "env_player_blockerKill10-1"
-	}
-}
 add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "env_player_blocker,Kill,,10,-1"
+}
 ; --- Re-add Valve's blockers copied directly from c2m3_coaster_commentary.txt, excluding the ones we don't want
 ; --- Block climbing coaster to skip starting the event
 {
