--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -489,12 +489,12 @@ add:
 ; --- Fix LOS on carnival sign props before barns
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign1AddOutputmins -104 -2 -320-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign1AddOutputmaxs 104 2 320-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign1AddOutputsolid 20-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign2AddOutputmins -104 -2 -320-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign2AddOutputmaxs 104 2 320-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign2AddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign1,AddOutput,mins -104 -2 -32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign1,AddOutput,maxs 104 2 32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign1,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign2,AddOutput,mins -104 -2 -32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign2,AddOutput,maxs 104 2 32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign2,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
@@ -1012,8 +1012,8 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "strongman-strongman_attract_mode_moustachio_soundKill6-1"
-		"OnTrigger" "strongman-strongman_attract_mode_moustachio_laugh_soundKill7.5-1"
+		"OnTrigger" "strongman-strongman_attract_mode_moustachio_sound,Kill,,6,-1"
+		"OnTrigger" "strongman-strongman_attract_mode_moustachio_laugh_sound,Kill,,7.5,-1"
 	}
 }
 ; --- Stop 'Stache Wacker sounds from looping constantly
@@ -1038,20 +1038,14 @@ filter:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- Remove clip behind a fence at the end of the map
-		"OnVersusPostIO" "anv_mapfixes_eventfence_wrongway,Kill,,10,-1"
-		"OnVersusPostIO" "anv_mapfixes_endfence_wrongwaya,Kill,,10,-1"
-		"OnVersusPostIO" "anv_mapfixes_endfence_wrongwayb,Kill,,10,-1"
-	}
+	"classname" "logic_auto"
+	; --- Remove clip behind a fence at the end of the map
+	"OnMapSpawn" "anv_mapfixes_eventfence_wrongway,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_endfence_wrongwaya,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_endfence_wrongwayb,Kill,,10,-1"
 }
 
 ; =====================================================
@@ -1080,9 +1074,9 @@ add:
 ; --- Auto crouch trigger for gazebo ladder
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladderAddOutputmins -56 -2 -60-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladderAddOutputmaxs 56 2 60-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladderAddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladder,AddOutput,mins -56 -2 -6,0,-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladder,AddOutput,maxs 56 2 6,0,-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladder,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "trigger_playermovement"
@@ -1271,7 +1265,7 @@ modify:
 	}
 	insert:
 	{
-		"OnMapSpawn" "randompath_1_navblockerBlockNav0-1"
+		"OnMapSpawn" "randompath_1_navblocker,BlockNav,,0,-1"
 	}
 }
 ; --- Remove trash bins that allow survivors to jump on the tents by the bumper cars
