--- a/cfg/stripper/maps/c2m5_concert.cfg
+++ b/cfg/stripper/maps/c2m5_concert.cfg
@@ -195,12 +195,12 @@ add:
 ; --- Fix LOS under snack machines
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smittyAddOutputmins -22 -1 -60-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smittyAddOutputmaxs 22 1 60-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smittyAddOutputsolid 20-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jakeAddOutputmins -46 -1 -60-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jakeAddOutputmaxs 46 1 60-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jakeAddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smitty,AddOutput,mins -22 -1 -6,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smitty,AddOutput,maxs 22 1 6,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smitty,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jake,AddOutput,mins -46 -1 -6,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jake,AddOutput,maxs 46 1 6,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jake,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
@@ -223,22 +223,22 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "_props_shadow_fixEnableShadow30-1"
-	"OnMapSpawn" "_props_shadow_fixDisableShadow31-1"
+	"OnMapSpawn" "_props_shadow_fix,EnableShadow,,30,-1"
+	"OnMapSpawn" "_props_shadow_fix,DisableShadow,,31,-1"
 	; --- Props added by TLS
-	"OnMapSpawn" "anv_mapfixes_helistuck_caseuniqueEnableShadow30-1"
-	"OnMapSpawn" "anv_mapfixes_helistuck_caseuniqueDisableShadow31-1"
-	"OnMapSpawn" "anv_mapfixes_helistuck_casecasterEnableShadow30-1"
-	"OnMapSpawn" "anv_mapfixes_helistuck_casecasterDisableShadow31-1"
-	"OnMapSpawn" "anv_mapfixes_missing_staircaseEnableShadow30-1"
-	"OnMapSpawn" "anv_mapfixes_missing_staircaseDisableShadow31-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_infecteddoorwayEnableShadow30-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_infecteddoorwayDisableShadow31-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroomEnableShadow30-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroomDisableShadow31-1"
+	"OnMapSpawn" "anv_mapfixes_helistuck_caseunique,EnableShadow,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_helistuck_caseunique,DisableShadow,,31,-1"
+	"OnMapSpawn" "anv_mapfixes_helistuck_casecaster,EnableShadow,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_helistuck_casecaster,DisableShadow,,31,-1"
+	"OnMapSpawn" "anv_mapfixes_missing_staircase,EnableShadow,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_missing_staircase,DisableShadow,,31,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_infecteddoorway,EnableShadow,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_infecteddoorway,DisableShadow,,31,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroom,EnableShadow,,30,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroom,DisableShadow,,31,-1"
 	; --- Disable shadows early on props added that start with shadows enabled to ensure the fix works
-	"OnMapSpawn" "anv_mapfixes_yesdraw_infecteddoorwayDisableShadow29-1"
-	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroomDisableShadow29-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_infecteddoorway,DisableShadow,,29,-1"
+	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroom,DisableShadow,,29,-1"
 	
 }
 ; --- Additional toggle on finale start
@@ -250,22 +250,22 @@ modify:
 	}
 	insert:
 	{
-		"FinaleStart" "_props_shadow_fixEnableShadow0-1"
-		"FinaleStart" "_props_shadow_fixDisableShadow1-1"
+		"FinaleStart" "_props_shadow_fix,EnableShadow,,0,-1"
+		"FinaleStart" "_props_shadow_fix,DisableShadow,,1,-1"
 		; --- Props added by TLS
-		"FinaleStart" "anv_mapfixes_helistuck_caseuniqueEnableShadow1-1"
-		"FinaleStart" "anv_mapfixes_helistuck_caseuniqueDisableShadow2-1"
-		"FinaleStart" "anv_mapfixes_helistuck_casecasterEnableShadow1-1"
-		"FinaleStart" "anv_mapfixes_helistuck_casecasterDisableShadow2-1"
-		"FinaleStart" "anv_mapfixes_missing_staircaseEnableShadow1-1"
-		"FinaleStart" "anv_mapfixes_missing_staircaseDisableShadow2-1"
-		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorwayEnableShadow1-1"
-		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorwayDisableShadow2-1"
-		"FinaleStart" "anv_mapfixes_yesdraw_infectedroomEnableShadow1-1"
-		"FinaleStart" "anv_mapfixes_yesdraw_infectedroomDisableShadow2-1"
+		"FinaleStart" "anv_mapfixes_helistuck_caseunique,EnableShadow,,1,-1"
+		"FinaleStart" "anv_mapfixes_helistuck_caseunique,DisableShadow,,2,-1"
+		"FinaleStart" "anv_mapfixes_helistuck_casecaster,EnableShadow,,1,-1"
+		"FinaleStart" "anv_mapfixes_helistuck_casecaster,DisableShadow,,2,-1"
+		"FinaleStart" "anv_mapfixes_missing_staircase,EnableShadow,,1,-1"
+		"FinaleStart" "anv_mapfixes_missing_staircase,DisableShadow,,2,-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorway,EnableShadow,,1,-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorway,DisableShadow,,2,-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infectedroom,EnableShadow,,1,-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infectedroom,DisableShadow,,2,-1"
 		; --- Disable shadows early on props added that start with shadows enabled to ensure the fix works
-		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorwayDisableShadow0-1"
-		"FinaleStart" "anv_mapfixes_yesdraw_infectedroomDisableShadow0-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorway,DisableShadow,,0,-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infectedroom,DisableShadow,,0,-1"
 	}
 }
 add:
@@ -456,24 +456,18 @@ modify:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- Remove axis warp and clip under the seating area
-		"OnVersusPostIO" "anv_mapfixes_axiswarp_anvilcase_trigmult,Kill,,10,-1"
-		"OnVersusPostIO" "anv_mapfixes_axiswarp_anvilcase_clip,Kill,,10,-1"
-		; --- Remove axis warps and clips by fire escapes
-		"OnVersusPostIO" "anv_mapfixes_axiswarp_sodapop1_trigmult,Kill,,10,-1"
-		"OnVersusPostIO" "anv_mapfixes_axiswarp_sodapop1_clip,Kill,,10,-1"
-		"OnVersusPostIO" "anv_mapfixes_axiswarp_sodapop2_trigmult,Kill,,10,-1"
-		"OnVersusPostIO" "anv_mapfixes_axiswarp_sodapop2_clip,Kill,,10,-1"
-	}
+	"classname" "logic_auto"
+	; --- Remove axis warp and clip under the seating area
+	"OnMapSpawn" "anv_mapfixes_axiswarp_anvilcase_trigmult,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_anvilcase_clip,Kill,,10,-1"
+	; --- Remove axis warps and clips by fire escapes
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop1_trigmult,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop1_clip,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop2_trigmult,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_axiswarp_sodapop2_clip,Kill,,10,-1"
 }
 
 ; =====================================================
