--- a/cfg/stripper/maps/c4m4_milltown_b.cfg
+++ b/cfg/stripper/maps/c4m4_milltown_b.cfg
@@ -13,7 +13,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car5,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car5Trigger0-1"
 	}
 }
 ; --- Alarm by playground saferoom house
@@ -24,7 +24,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car1,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car1Trigger0-1"
 	}
 }
 ; --- Alarm by the playground green house
@@ -35,7 +35,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car4,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car4Trigger0-1"
 	}
 }
 ; --- Alarm by the garage sale
@@ -46,7 +46,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car2,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car2Trigger0-1"
 	}
 }
 ; --- Alarm by the sugarmill saferoom
@@ -57,7 +57,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car3,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car3Trigger0-1"
 	}
 }
 
@@ -709,18 +709,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Make the physics prop traffic barrels by the sugarmill saferoom static
-modify:
-{
-	match:
-	{
-		"model" "models/props_fairgrounds/traffic_barrel.mdl"
-	}
-	replace:
-	{
-		"spawnflags" "264"
-	}
-}
+
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
 ; =====================================================
@@ -986,9 +975,9 @@ add:
 ; --- Fix LOS under pickup
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickupAddOutputmins -81 -2 -130-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickupAddOutputmaxs 81 2 130-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickupAddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup,AddOutput,mins -81 -2 -13,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup,AddOutput,maxs 81 2 13,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
@@ -1059,18 +1048,12 @@ filter:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- Replace blocker on fence by garage sale
-		"OnVersusPostIO" "anv_mapfixes_treehouse_whitefence,Kill,,10,-1"
-	}
+	"classname" "logic_auto"
+	; --- Replace blocker on fence by garage sale
+	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,10,-1"
 }
 
 ; =====================================================
