--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -188,14 +188,14 @@ modify:
 	}
 	insert:
 	{
-		"OnCase08" "saferoom_car_dynamicColor99 135 1570-1"
-		"OnCase07" "saferoom_car_dynamicColor226 188 870-1"
-		"OnCase06" "saferoom_car_dynamicColor156 81 620-1"
-		"OnCase05" "saferoom_car_dynamicColor197 176 1290-1"
-		"OnCase04" "saferoom_car_dynamicColor114 80 520-1"
-		"OnCase03" "saferoom_car_dynamicColor162 189 1960-1"
-		"OnCase02" "saferoom_car_dynamicColor253 241 2030-1"
-		"OnCase01" "saferoom_car_dynamicColor52 46 460-1"
+		"OnCase08" "saferoom_car_dynamic,Color,99 135 157,0,-1"
+		"OnCase07" "saferoom_car_dynamic,Color,226 188 87,0,-1"
+		"OnCase06" "saferoom_car_dynamic,Color,156 81 62,0,-1"
+		"OnCase05" "saferoom_car_dynamic,Color,197 176 129,0,-1"
+		"OnCase04" "saferoom_car_dynamic,Color,114 80 52,0,-1"
+		"OnCase03" "saferoom_car_dynamic,Color,162 189 196,0,-1"
+		"OnCase02" "saferoom_car_dynamic,Color,253 241 203,0,-1"
+		"OnCase01" "saferoom_car_dynamic,Color,52 46 46,0,-1"
 	}
 }
 
@@ -499,49 +499,8 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-; --- Make physics prop signs non-solid so players don't get stuck on them
-modify:
-{
-	match:
-	{
-		"targetname" "sign02"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign03"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign05"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign06"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
 ; --- Make the CEDA doors open faster
+modify:
 {
 	match:
 	{
@@ -1461,7 +1420,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "finale_alarm_soundFadeOut53-1"
+		"OnTrigger" "finale_alarm_sound,FadeOut,5,3,-1"
 	}
 }
 
@@ -1476,18 +1435,12 @@ modify:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading versus
-modify:
+; --- Remove TLS infected clips after loading
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		; --- Clip on saferoom roof
-		"OnVersusPostIO" "anv_mapfixes_skybox_shieldaKill10-1"
-	}
+	"classname" "logic_auto"
+	; --- Clip on saferoom roof
+	"OnMapSpawn" "anv_mapfixes_skybox_shielda,Kill,,10,-1"
 }
 
 ; =====================================================
