--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -328,11 +328,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Remove a barrel by the shed that allows survivors to climb
-filter:
-{
-	"hammerid" "1549682"
-}
 ; --- Block survivors from climbing around a fenced crypt in the cemetery
 add:
 {
@@ -374,22 +369,14 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-; --- Make the physics prop oil barrels static, allowing for more spawns without the annoyance of moving barrels
-modify:
-{
-	match:
-	{
-		"model" "models/props_urban/oil_drum001.mdl"
-	}
-	replace:
-	{
-		"spawnflags" "264"
-	}
-}
-; --- Remove fallen over barrel by the shed
 filter:
+; --- Remove fallen oil barrel by the shed
 {
 	"hammerid" "1549590"
+}
+; --- Remove oil barrel on top of stack by the shed after the bridge
+{
+	"hammerid" "1549682"
 }
 add:
 ; --- Add missing glass to vehicles
@@ -538,7 +525,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm1-caralarm_car1Color45 58 1511-1"
+		"OnTrigger" "alarm1-caralarm_car1,Color,45 58 151,1,-1"
 	}
 }
 {
@@ -548,7 +535,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm2-caralarm_car1Color9 41 1381-1"
+		"OnTrigger" "alarm2-caralarm_car1,Color,9 41 138,1,-1"
 	}
 }
 {
@@ -558,7 +545,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm3-caralarm_car1Color68 91 1831-1"
+		"OnTrigger" "alarm3-caralarm_car1,Color,68 91 183,1,-1"
 	}
 }
 {
@@ -568,7 +555,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm4-caralarm_car1Color68 68 1831-1"
+		"OnTrigger" "alarm4-caralarm_car1,Color,68 68 183,1,-1"
 	}
 }
 {
@@ -578,7 +565,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm5-caralarm_car1Color52 70 1141-1"
+		"OnTrigger" "alarm5-caralarm_car1,Color,52 70 114,1,-1"
 	}
 }
 {
@@ -588,7 +575,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm6-caralarm_car1Color9 41 1381-1"
+		"OnTrigger" "alarm6-caralarm_car1,Color,9 41 138,1,-1"
 	}
 }
 {
@@ -598,7 +585,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm7-caralarm_car1Color45 58 1511-1"
+		"OnTrigger" "alarm7-caralarm_car1,Color,45 58 151,1,-1"
 	}
 }
 {
@@ -608,7 +595,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "alarm8-caralarm_car1Color68 91 1831-1"
+		"OnTrigger" "alarm8-caralarm_car1,Color,68 91 183,1,-1"
 	}
 }
 
