--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -215,7 +215,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "landing_blockerDisable30-1"
+		"OnTrigger" "landing_blocker,Disable,,30,-1"
 	}
 }
 add:
@@ -252,9 +252,9 @@ add:
 ; --- Auto crouch trigger to prevent a stuck spot on the stairs in the pool room
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuckAddOutputmins -1 -4.5 -140-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuckAddOutputmaxs 1 4.5 140-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuckAddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuck,AddOutput,mins -1 -4.5 -14,0,-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuck,AddOutput,maxs 1 4.5 14,0,-1"
+	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuck,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "trigger_playermovement"
@@ -267,88 +267,6 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-; --- Make physics prop signs non-solid so players don't get stuck on them
-modify:
-{
-	match:
-	{
-		"targetname" "sign01"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign02"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign03"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign04"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign05"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign06"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign07"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign08"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
 add:
 ; --- Clipping around tree by the saferoom to stop players getting stuck as easily
 {
@@ -487,7 +405,7 @@ modify:
 	}
 	insert:
 	{
-		"OnMapSpawn" "ds_ext-all_offEnable0-1"
+		"OnMapSpawn" "ds_ext-all_off,Enable,,0,-1"
 	}
 }
 filter:
