--- a/cfg/stripper/maps/c4m2_sugarmill_a.cfg
+++ b/cfg/stripper/maps/c4m2_sugarmill_a.cfg
@@ -1003,12 +1003,12 @@ add:
 ; --- Fix LOS under generator
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site1AddOutputmins -1 -38 -120-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site1AddOutputmaxs 1 38 120-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site1AddOutputsolid 20-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site2AddOutputmins -20 -1 -120-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site2AddOutputmaxs 20 1 120-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site2AddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site1,AddOutput,mins -1 -38 -12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site1,AddOutput,maxs 1 38 12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site1,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site2,AddOutput,mins -20 -1 -12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site2,AddOutput,maxs 20 1 12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_generator_con_site2,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
@@ -1155,16 +1155,10 @@ add:
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
 ; --- Remove Valve's commentary blockers so we can replace them with our own
-modify:
+add:
 {
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		"OnVersusPostIO" "env_player_blockerKill10-1"
-	}
+	"classname" "logic_auto"
+	"OnMapSpawn" "env_player_blocker,Kill,,10,-1"
 }
 add:
 ; --- Re-add Valve's blockers copied directly from c4m2_sugarmill_a_commentary.txt, excluding the ones we don't want
