--- a/cfg/stripper/maps/c4m5_milltown_escape.cfg
+++ b/cfg/stripper/maps/c4m5_milltown_escape.cfg
@@ -8,14 +8,14 @@
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "pre_event_tank_triggerAddOutputmins -20 -132 -7200-1"
-	"OnMapSpawn" "pre_event_tank_triggerAddOutputmaxs 20 132 7200-1"
-	"OnMapSpawn" "pre_event_tank_triggerAddOutputsolid 20-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputmins -100 -148 -1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputmaxs 100 148 1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputboxmins -100 -148 -1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputboxmaxs 100 148 1280-1"
-	"OnMapSpawn" "tank_teleport_triggerAddOutputsolid 20-1"
+	"OnMapSpawn" "pre_event_tank_trigger,AddOutput,mins -20 -132 -720,0,-1"
+	"OnMapSpawn" "pre_event_tank_trigger,AddOutput,maxs 20 132 720,0,-1"
+	"OnMapSpawn" "pre_event_tank_trigger,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,mins -100 -148 -128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,maxs 100 148 128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,boxmins -100 -148 -128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,boxmaxs 100 148 128,0,-1"
+	"OnMapSpawn" "tank_teleport_trigger,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "trigger_once"
@@ -45,7 +45,7 @@ add:
 	"spawnflags" "1"
 	"StartDisabled" "1"
 	"target" "tank_spawn_position"
-	"OnStartTouch" "tank_teleport_triggerKill0-1"
+	"OnStartTouch" "tank_teleport_trigger,Kill,,0,-1"
 }
 {
 	"classname" "info_teleport_destination"
@@ -74,7 +74,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car5,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car5Trigger0-1"
 	}
 }
 ; --- Alarm by playground saferoom house
@@ -85,7 +85,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car1,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car1Trigger0-1"
 	}
 }
 ; --- Alarm by the playground green house
@@ -96,7 +96,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car4,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car4Trigger0-1"
 	}
 }
 ; --- Alarm by the garage sale
@@ -107,7 +107,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car2,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car2Trigger0-1"
 	}
 }
 ; --- Alarm by the sugarmill saferoom
@@ -118,7 +118,7 @@ modify:
 	}
 	replace:
 	{
-		"OnTrue" "relay_caralarm_on-car3,Trigger,,0,-1"
+		"OnTrue" "relay_caralarm_on-car3Trigger0-1"
 	}
 }
 
