--- a/cfg/stripper/maps/c5m1_waterfront.cfg
+++ b/cfg/stripper/maps/c5m1_waterfront.cfg
@@ -180,55 +180,12 @@ add:
 	"maxs" "64 6 36"
 	"initialstate" "1"
 	"BlockType" "0"
-	"targetname" "anv_mapfixes_REPLACEMENT"
 }
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-; --- Make physics prop signs non-solid so players don't get stuck on them
-modify:
-{
-	match:
-	{
-		"targetname" "sign02"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign03"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign04"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
-{
-	match:
-	{
-		"targetname" "sign05"
-	}
-	replace:
-	{
-		"spawnflags" "260"
-	}
-}
 add:
 ; --- Block items from falling down the small gap in saferoom
 {
@@ -345,7 +302,7 @@ add:
 	"disableshadows" "1"
 }
 filter:
-; --- Remove a table (and chairs) on the balcony opposite the saferoom ramp
+; --- Remove table and chairs on the balcony opposite the saferoom ramp
 {
 	"hammerid" "472733"
 }
@@ -355,14 +312,30 @@ filter:
 {
 	"hammerid" "1064146"
 }
-; --- Remove a table in the bar that often falls over when spawning and blocks the doorway
+; --- Remove a table in the bar that can fall over when spawning and blocks the doorway
 {
 	"hammerid" "461272"
 }
-; --- Remove the bar / restaurant chairs to make those areas less visually noisy
+; --- Fix LOS on jukebox in bar
+add:
 {
-	"classname" "prop_physics"
-	"model" "models/props_interiors/chair_thonet.mdl"
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_restaurant,AddOutput,mins -18 -11 -32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_restaurant,AddOutput,maxs 18 11 32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_restaurant,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1492 -1684 -344"
+	"targetname" "anv_mapfixes_losfix_jukebox_restaurant"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1492 -1684 -344"
+	"mins" "-18.1 -11.1 -32.1"
+	"maxs" "18.1 11.1 32.1"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 
 
@@ -395,6 +368,93 @@ add:
 	"origin" "119 -829 -376"
 	"angles" "0 90 0"
 	"model" "models/props_urban/fence_cover001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Props in the restaurant after the kitchen
+{
+	"classname" "prop_dynamic"
+	"origin" "-2876 54 -368"
+	"angles" "0 0 0"
+	"model" "models/props_office/vending_machine01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2916 -391 -368"
+	"angles" "0 0 0"
+	"model" "models/props_downtown/pooltable.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2916 -375 -322"
+	"angles" "0 0 0"
+	"model" "models/props_junk/cardboard_box03_static.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2642 -116 -336"
+	"angles" "0 180 0"
+	"model" "models/props_unique/jukebox01_body.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2642 -116 -336"
+	"angles" "0 180 0"
+	"model" "models/props_unique/jukebox01.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"DefaultAnim" "idle"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2642 -104 -324"
+	"angles" "0 180 0"
+	"model" "models/props_unique/jukebox01_menu.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Fix LOS on added jukebox
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_restaurant,AddOutput,mins -18 -11 -32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_restaurant,AddOutput,maxs 18 11 32,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_restaurant,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2642 -116 -336"
+	"targetname" "anv_mapfixes_losfix_jukebox_restaurant"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2642 -116 -336"
+	"mins" "-18.1 -11.1 -32.1"
+	"maxs" "18.1 11.1 32.1"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Block the main path out of the restaurant, forcing players to use the windows
+{
+	"classname" "prop_dynamic"
+	"origin" "-3036 -320 -369"
+	"angles" "0 0 0"
+	"model" "models/props_urban/gate_wall003_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-3036 -448 -369"
+	"angles" "0 0 0"
+	"model" "models/props_urban/gate_wall003_128.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -442,18 +502,11 @@ filter:
 	"hammerid" "1633358"
 }
 ; --- Remove Valve's commentary blockers so we can replace them with our own
-modify:
-{
-	match:
-	{
-		"classname" "info_gamemode"
-	}
-	insert:
-	{
-		"OnVersusPostIO" "env_player_blockerKill10-1"
-	}
-}
 add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "env_player_blocker,Kill,,10,-1"
+}
 ; --- Re-add Valve's blockers copied directly from c5m1_waterfront_commentary.txt, excluding the ones we don't want
 ; --- Block survivors from jumping over a wall near the start to get on the kitchen
 {
